--- a/cursor.css
+++ b/cursor.css
@@ -8,6 +8,7 @@
     transition-timing-function: ease-out;
     animation: cursorAnim .5s infinite alternate;
     pointer-events: none;
+    z-index: 10;
 }
 
 .cursor::after {
