Menu Font Change

--- a/home.scss
+++ b/home.scss
@@ -32,7 +32,7 @@
   text-decoration: none;
   color: #fff;
   right: 100px;
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   cursor: pointer;
   font-weight: bold;
