Home page slider bug fix

--- a/slider.css
+++ b/slider.css
@@ -128,7 +128,7 @@ button:focus {
 }
 
 .card {
-  --card-translateY-offset: 0vh;
+  --card-translateY-offset: 0vh !important;
   position: absolute;
   left: 50%;
   top: 50%;
