--- a/InnerPages/PetMemorial.css
+++ b/InnerPages/PetMemorial.css
@@ -126,4 +126,79 @@
   overflow-x: hidden;
 }
 
+.banner__three {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: 50s para infinite linear;
+  background-image: url("../images/PetMemorial/banner-3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  z-index: 800;
+  overflow-x: hidden;
+}
+
+.next__page {
+  background: rgba(0, 0, 0, 0.787);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.next__page .image__container {
+  display: flex;
+}
+.next__page .image__container .image__url {
+  position: relative;
+  text-align: center;
+  color: white;
+  height: 450px;
+  width: 800px;
+  background-image: url("../images/CremationPlaque/banner.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: transform 0.5s ease;
+}
+.next__page .image__container .image__url:hover {
+  transition: transform 0.5s ease;
+  transform: scale(1.1);
+}
+.next__page .image__container .image__url a {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-weight: bold;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-decoration: none;
+  font-size: 40px;
+}
+.next__page .image__container .next__page__text {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+}
+.next__page .image__container .next__page__text p {
+  color: white;
+  font-weight: bold;
+  transform: rotate(90deg);
+  margin-bottom: 0px;
+  padding-top: 110px;
+}
+.next__page .arrow__right {
+  margin-top: 25px;
+  font-size: 20px;
+}
+.next__page .arrow__right::before {
+  text-align: right;
+  font-weight: bold;
+  color: white;
+}
+
 /*# sourceMappingURL=PetMemorial.css.map */
