--- a/InnerPages/PetMemorial.scss
+++ b/InnerPages/PetMemorial.scss
@@ -134,3 +134,80 @@
   z-index: 800;
   overflow-x: hidden;
 }
+.banner__three{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: 50s para infinite linear;
+  background-image: url("../images/PetMemorial/banner-3.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  z-index: 800;
+  overflow-x: hidden;
+}
+
+.next__page{
+  background: rgba(0, 0, 0, 0.787);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  .image__container{
+    display: flex;
+    .image__url{
+      position: relative;
+      text-align: center;
+      color: white;
+      height: 450px;
+      width: 800px;
+      background-image: url("../images/CremationPlaque/banner.png");
+      background-repeat: no-repeat;
+      background-position: center;
+      transition: transform .5s ease;
+      &:hover{
+            transition: transform .5s ease;
+            transform: scale(1.1);
+          }
+      a{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        font-weight: bold;
+        transform: translate(-50%, -50%);
+        color: white;
+        text-decoration: none;
+        font-size: 40px;
+      }
+    }
+
+    .next__page__text{
+      display: flex;
+      align-items: flex-end;
+      justify-content: flex-start;
+      p{
+        color: white;
+        font-weight: bold;
+        transform: rotate(90deg);
+        margin-bottom: 0px;
+        padding-top: 110px;
+      }
+    }
+
+  }
+  .arrow__right{
+    margin-top: 25px;
+    font-size: 20px;
+    &::before{
+      text-align: right;
+      font-weight: bold;
+      color: white;
+    }
+  }
+}
+
