--- a/InnerPages/style.scss
+++ b/InnerPages/style.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap");
-
+@import "./mixin";
 * {
   box-sizing: border-box;
   margin: 0;
@@ -27,19 +27,7 @@
 
 .pet__container{
   .pet__banner{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: 50s para infinite linear;
-    background-image: url("../images/PetMemorial/banner.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    background-size: cover;
-    z-index: 800;
-    overflow-x: hidden;
+    @include banner("../images/PetMemorial/banner.png");
     .banner__content{
       width: 100%;
       height: 100%;
@@ -107,7 +95,7 @@
   display: flex;
   align-items: center;
   h2{
-  color: white;
+    color: white;
     text-align: center;
     padding-bottom: 10px;
   }
@@ -120,34 +108,10 @@
   }
 }
 .banner__two{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: 50s para infinite linear;
-  background-image: url("../images/PetMemorial/banner-2.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
-  z-index: 800;
-  overflow-x: hidden;
+  @include banner("../images/PetMemorial/banner-2.png");
 }
 .banner__three{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: 50s para infinite linear;
-  background-image: url("../images/PetMemorial/banner-3.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
-  z-index: 800;
-  overflow-x: hidden;
+  @include banner("../images/PetMemorial/banner-3.png");
 }
 
 .next__page{
@@ -171,9 +135,9 @@
       background-position: center;
       transition: transform .5s ease;
       &:hover{
-            transition: transform .5s ease;
-            transform: scale(1.1);
-          }
+        transition: transform .5s ease;
+        transform: scale(1.1);
+      }
       a{
         position: absolute;
         top: 50%;
