--- a/menu.css
+++ b/menu.css
@@ -91,7 +91,6 @@
   right: 100px;
   text-decoration: none;
   color: #fff;
-  right: 100px;
   font-family: "Open Sans", sans-serif;
   font-size: 20px;
   cursor: pointer;
@@ -109,6 +108,16 @@
 .webLogo {
   width: 150px;
   filter: brightness(0) invert(1);
+}
+
+@media (max-width: 767px) {
+  .menu .ul {
+    flex-direction: column;
+    align-items: center;
+  }
+  .menu .ul li a {
+    font-size: 28px !important;
+  }
 }
 
 /*# sourceMappingURL=menu.css.map */
