--- a/testimonial.scss
+++ b/testimonial.scss
@@ -236,3 +236,13 @@
   }
   .owl-theme .owl-controls{ bottom: -12%; }
 }
+@media only screen and (max-width:768px){
+  .testimonial__wrapper{
+    height: 100%;
+    overflow: hidden;
+    scroll-snap-type: none;
+    .testimonial-bg{
+      padding: 50px 0px;
+    }
+  }
+}
