--- a/contact-us.css
+++ b/contact-us.css
@@ -1,8 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap");
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+@-webkit-keyframes move {
+  25% {
+    opacity: 1;
+  }
+  33% {
+    opacity: 1;
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
+  }
+  67% {
+    opacity: 1;
+    -webkit-transform: translateY(40px);
+            transform: translateY(40px);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+            transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+  }
 }
 
 @keyframes move {
@@ -11,19 +33,24 @@
   }
   33% {
     opacity: 1;
-    transform: translateY(30px);
+    -webkit-transform: translateY(30px);
+            transform: translateY(30px);
   }
   67% {
     opacity: 1;
-    transform: translateY(40px);
+    -webkit-transform: translateY(40px);
+            transform: translateY(40px);
   }
   100% {
     opacity: 0;
-    transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+    -webkit-transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+            transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
   }
 }
+
 .contact {
-  scroll-snap-type: y mandatory;
+  -ms-scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
   overflow: auto;
   height: 100vh;
 }
@@ -31,10 +58,17 @@
 .contact__banner {
   width: 100%;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: 50s para infinite linear;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-animation: 50s para infinite linear;
+          animation: 50s para infinite linear;
   background-image: url("./images/extra/banner.png");
   background-repeat: no-repeat;
   background-position: center;
@@ -44,56 +78,83 @@
   overflow-x: hidden;
   scroll-snap-align: start;
 }
+
 .contact__banner .banner__content {
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
+
 .contact__banner .banner__content h1 {
   color: white;
   font-weight: bold;
   font-size: 52px;
   text-align: center;
 }
+
 .contact__banner .banner__content .chevron__bottom {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .contact__banner .banner__content .chevron__bottom .chevron {
   position: absolute;
   width: 28px;
   height: 8px;
   opacity: 0;
-  transform: scale3d(0.5, 0.5, 0.5);
-  animation: move 3s ease-out infinite;
+  -webkit-transform: scale3d(0.5, 0.5, 0.5);
+          transform: scale3d(0.5, 0.5, 0.5);
+  -webkit-animation: move 3s ease-out infinite;
+          animation: move 3s ease-out infinite;
 }
+
 .contact__banner .banner__content .chevron__bottom .chevron:first-child {
-  animation: move 3s ease-out 1s infinite;
+  -webkit-animation: move 3s ease-out 1s infinite;
+          animation: move 3s ease-out 1s infinite;
 }
+
 .contact__banner .banner__content .chevron__bottom .chevron:nth-child(2) {
-  animation: move 3s ease-out 2s infinite;
+  -webkit-animation: move 3s ease-out 2s infinite;
+          animation: move 3s ease-out 2s infinite;
 }
+
 .contact__banner .banner__content .chevron__bottom .chevron:before,
 .contact__banner .banner__content .chevron__bottom .chevron:after {
-  content: " ";
+  content: ' ';
   position: absolute;
   top: 0;
   height: 100%;
   width: 51%;
   background: #fff;
 }
+
 .contact__banner .banner__content .chevron__bottom .chevron:before {
   left: 0;
-  transform: skew(0deg, 30deg);
+  -webkit-transform: skew(0deg, 30deg);
+          transform: skew(0deg, 30deg);
 }
+
 .contact__banner .banner__content .chevron__bottom .chevron:after {
   right: 0;
   width: 50%;
-  transform: skew(0deg, -30deg);
+  -webkit-transform: skew(0deg, -30deg);
+          transform: skew(0deg, -30deg);
 }
 
 .contact__content {
@@ -101,31 +162,41 @@
   height: 100vh;
   line-height: 2rem;
   background: rgba(0, 0, 0, 0.787);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   scroll-snap-align: start;
 }
+
 .contact__content .contact__description h1 {
   color: white;
   font-weight: bold;
 }
+
 .contact__content .contact__description h2 {
   color: white;
   font-weight: bold;
 }
+
 .contact__content .contact__description p {
   color: white;
   font-weight: bold;
 }
+
 .contact__content .contact__form input, .contact__content .contact__form textarea {
   width: 100%;
   margin-top: 20px;
   padding: 10px;
   border: none;
 }
+
 .contact__content .contact__form input:focus, .contact__content .contact__form textarea:focus {
   outline: none;
 }
+
 .contact__content .contact__form button {
   padding: 5px 15px;
   width: 100%;
@@ -134,6 +205,7 @@
   color: white;
   font-weight: bold;
 }
+
 .contact__content .contact__form button:focus {
   outline: none;
 }
@@ -142,7 +214,8 @@
   .contact {
     height: 100%;
     overflow: hidden;
-    scroll-snap-type: none;
+    -ms-scroll-snap-type: none;
+        scroll-snap-type: none;
   }
   .contact .contact__content {
     height: 100%;
@@ -152,5 +225,4 @@
     text-align: center;
   }
 }
-
 /*# sourceMappingURL=contact-us.css.map */
