--- a/menu.css
+++ b/menu.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', sans-serif !important;
 }
 
 .menuContainer {
@@ -10,10 +11,17 @@
   width: 100%;
   z-index: 3;
 }
+
 .menuContainer .header_top {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .menu {
@@ -23,62 +31,95 @@
   width: 100%;
   height: 100vh;
   background-color: #181818;
-  transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
   z-index: 4;
 }
+
 .menu .button {
   color: #fff;
 }
+
 .menu .menu_top {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+    padding: 30px 0px 30px 20px;
 }
+
 .menu .ul {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 40vh;
   margin-bottom: 100px;
 }
+
 .menu .ul li {
   margin: 20px 0;
   z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 .menu .ul li a {
   text-decoration: none;
   color: white;
   opacity: 0.3;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 40px;
   margin: 0px 30px;
   text-transform: uppercase;
   font-weight: 300;
   mix-blend-mode: difference;
 }
+
 .menu .social {
   position: absolute;
   bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 150px;
   width: 100%;
 }
+
 .menu .social ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
 }
+
 .menu .social ul li {
   margin: 0px 25px;
 }
+
 .menu .social ul li a {
   text-decoration: none;
   color: white;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 400;
@@ -91,7 +132,7 @@
   right: 100px;
   text-decoration: none;
   color: #fff;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   cursor: pointer;
   font-weight: bold;
@@ -107,17 +148,24 @@
 
 .webLogo {
   width: 150px;
-  filter: brightness(0) invert(1);
+}
+
+.header_top {
+  padding: 20px 0px 20px 10px;
 }
 
 @media (max-width: 767px) {
   .menu .ul {
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .menu .ul li a {
     font-size: 28px !important;
   }
 }
-
 /*# sourceMappingURL=menu.css.map */
