--- a/menu.scss
+++ b/menu.scss
@@ -109,8 +109,11 @@
 }
 
 .webLogo{
-  width: 150px;
-  filter: brightness(0) invert(1);
+  width:150px;
+  // filter: brightness(0) invert(1);
+}
+.header_top{
+  padding: 20px 0px 20px 10px;
 }
 
 
